[gd_scene load_steps=19 format=3 uid="uid://jjjoyq74ahnb"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_m2kcv"]
[ext_resource type="FontFile" uid="uid://cn0u8c1yp1mpp" path="res://Assets/fonts/BadComic-Regular.ttf" id="2_67aqb"]
[ext_resource type="FontFile" uid="uid://cpqhmnb4lhmnj" path="res://Assets/fonts/friendlyscribbles.ttf" id="3_84dyf"]
[ext_resource type="FontFile" uid="uid://c70w3bqqma8a7" path="res://Assets/fonts/ThaleahFat.ttf" id="4_kl60n"]
[ext_resource type="PackedScene" uid="uid://c880bkl4ifdve" path="res://Entities/Cat/cat_01.tscn" id="5_ulrj8"]
[ext_resource type="Texture2D" uid="uid://dvbrkoosdmefb" path="res://Entities/School_Props/Desk/Desk01.png" id="6_c53u3"]
[ext_resource type="Texture2D" uid="uid://cc5mw6sef2hnm" path="res://Entities/School_Props/Books/LilBlueBook01.png" id="9_lx80b"]
[ext_resource type="Texture2D" uid="uid://lqsavswyv8bv" path="res://Entities/School_Props/Chair/Chair01.png" id="10_hwgar"]
[ext_resource type="AudioStream" uid="uid://bqtufyxkwpd2b" path="res://Assets/music/time_for_adventure.mp3" id="11_panws"]
[ext_resource type="AudioStream" uid="uid://b5iuowq2svkyb" path="res://Assets/sounds/Select 1.wav" id="12_t64pr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1sgxs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5lne"]
bg_color = Color(0.905006, 0, 0.0307832, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.498039)
shadow_size = 2
shadow_offset = Vector2(2, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45vi3"]
bg_color = Color(0.886275, 0.239216, 0.588235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.498039)
shadow_size = 2
shadow_offset = Vector2(2, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4yq0"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.498039)
shadow_size = 2
shadow_offset = Vector2(2, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bggsv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ynmg"]
bg_color = Color(0.905006, 0, 0.0307832, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.498039)
shadow_size = 2
shadow_offset = Vector2(2, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w5whm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b63ci"]
bg_color = Color(0.905006, 0, 0.0307832, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.498039)
shadow_size = 2
shadow_offset = Vector2(2, 4)

[node name="Main Menu" type="Control"]
custom_minimum_size = Vector2(480, 320)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2kcv")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.931702, 3.27289e-06, 0.435935, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.315
offset_bottom = -0.200043
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_67aqb")
theme_override_font_sizes/font_size = 248
text = "Espresso,"
horizontal_alignment = 1
clip_text = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.347
anchor_right = 1.0
anchor_bottom = 0.597
offset_left = -19.2
offset_top = 0.240021
offset_bottom = 0.23999
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0714779
theme_override_fonts/font = ExtResource("3_84dyf")
theme_override_font_sizes/font_size = 128
text = "come back!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 110.0
offset_right = 26.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(27, 41.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_kl60n")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_1sgxs")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_d5lne")
theme_override_styles/hover = SubResource("StyleBoxFlat_45vi3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5lne")
theme_override_styles/normal = SubResource("StyleBoxFlat_d4yq0")
text = "PLAY"
icon_alignment = 1

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_kl60n")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_bggsv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_3ynmg")
theme_override_styles/hover = SubResource("StyleBoxFlat_45vi3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5lne")
theme_override_styles/normal = SubResource("StyleBoxFlat_d4yq0")
text = "OPTIONS"
icon_alignment = 1

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_kl60n")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_w5whm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_b63ci")
theme_override_styles/hover = SubResource("StyleBoxFlat_45vi3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5lne")
theme_override_styles/normal = SubResource("StyleBoxFlat_d4yq0")
text = "QUIT"
icon_alignment = 1

[node name="Props" type="Node2D" parent="."]

[node name="Desk01" type="Sprite2D" parent="Props"]
position = Vector2(626, 986)
scale = Vector2(3, 3)
texture = ExtResource("6_c53u3")

[node name="Desk02" type="Sprite2D" parent="Props"]
position = Vector2(605, 799)
scale = Vector2(3, 3)
texture = ExtResource("6_c53u3")

[node name="Desk03" type="Sprite2D" parent="Props"]
position = Vector2(632, 614)
scale = Vector2(3, 3)
texture = ExtResource("6_c53u3")

[node name="Desk04" type="Sprite2D" parent="Props"]
position = Vector2(499, 446)
rotation = -0.180458
scale = Vector2(3, 3)
texture = ExtResource("6_c53u3")

[node name="Desk05" type="Sprite2D" parent="Props"]
position = Vector2(227, 261)
rotation = -1.20167
scale = Vector2(3, 3)
texture = ExtResource("6_c53u3")

[node name="Chair01" type="Sprite2D" parent="Props"]
position = Vector2(1390, 934)
scale = Vector2(3, 3)
texture = ExtResource("10_hwgar")

[node name="LilBlueBook01" type="Sprite2D" parent="Props"]
position = Vector2(1402, 898)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_lx80b")

[node name="Cat01" parent="." instance=ExtResource("5_ulrj8")]
position = Vector2(1364, 890)
scale = Vector2(8, 8)
disable_mode = 1
motion_mode = 1
script = null

[node name="Audio_Controller" type="Node" parent="."]

[node name="MainMenu_BGM" type="AudioStreamPlayer" parent="Audio_Controller"]
stream = ExtResource("11_panws")
autoplay = true
bus = &"music"

[node name="sfx_click" type="AudioStreamPlayer" parent="Audio_Controller"]
stream = ExtResource("12_t64pr")
bus = &"sfx"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
